Updated composer.json for consistency

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "drupal/queenslaw_probonoradio",
   "description": "A custom theme developed for the Queen's University Faculty of Law Pro Bono Radio website by Purely Interactive.",
   "type": "drupal-custom-theme",
-  "homepage": "http://probonoradio.law.queensu.ca/",
+  "homepage": "http://law.queensu.ca/",
   "authors": [
     {
       "name": "Noah St. Amand",
